<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.kandskat.repasopro.ActividadQuint">
    <!--Cuando se crea un ToggleButton no olvidar darle el texto via @String
        tanto para cuando se mantenga pulsado es decir textOn como cuando
        no se mantenga pulsado es decir textOff-->
    <ToggleButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textOn="@string/ToglBtnON"
        android:textOff="@string/ToglBtnOFF"
        android:id="@+id/ToglBtn_Seleccion"/>
    <!--Creando un button para poder pasar de activity 5 a 6
        recuerda que para crear una activity ir a app click derecho
        new activity y el tipo de activity a crear-->
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Btn_Ir"
        android:id="@+id/Btn_Ir_A_Sexta"/>


</LinearLayout>
